--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -1,6 +1,6 @@
 *,
-*::after,
-*::before {
+*::before,
+*::after{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -10,6 +10,10 @@
     display: none;
 }
 
-.wrapper{
-    background: navy;
-}
+body {
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    height: 100vh;
+    overflow-x: hidden;
+  }
