--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,1 +1,140 @@
-/*/*
+*,
+*::after,
+*::before {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+::-webkit-scrollbar {
+    display: none;
+}
+
+body {
+    background-color: #000080;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 900;
+    color: white;
+    font-size: 15px;
+    margin: 0;
+    padding: 0;
+}
+
+h3 {
+    text-align: center;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 900;
+    color: white;
+    font-size: 24px;
+    margin-top: 20px;
+}
+
+table {
+    width: 90%;
+    border-collapse: collapse;
+    margin: 25px auto;
+    cursor: pointer;
+}
+
+table, th, td {
+    border: 1px solid black;
+}
+
+th, td {
+    padding: 8px;
+    text-align: center;
+    border: solid white;
+    font-size: 12px;
+}
+
+hr {
+    border: none;
+    border-top: 3px solid white;
+    width: 100%;
+}
+
+.header {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: #4169E1;
+    font-family: 'Montserrat', sans-serif !important;
+    font-weight: 900 !important;
+    color: black;
+    font-size: 16px;
+    padding: 10px;
+    text-align: center;
+}
+
+.header img {
+    width: 50px;
+    height: 50px;
+    margin: 10px 0;
+}
+
+.header h1 {
+    font-size: 18px;
+    text-align: center;
+    margin: 10px 0;
+}
+
+table tr th:hover, table tr td:hover {
+    background-color: #3668ff;
+    transition: background-color 0.3s ease-in-out;
+    color: #000;
+}
+
+.footer-container {
+    background-color: #4169E1;
+    text-align: center;
+    padding: 10px 0;
+    color: black;
+}
+
+.footer-container .lead {
+    font-size: 12px;
+}
+
+@media (max-width: 768px) {
+    table {
+        width: 100%;
+        font-size: 14px;
+    }
+    
+    th, td {
+        padding: 6px;
+        font-size: 10px;
+    }
+}
+
+@media (max-width: 480px) {
+    table {
+        width: 100%;
+        font-size: 12px;
+    }
+
+    .header h1 {
+        font-size: 16px;
+    }
+    
+    th, td {
+        padding: 5px;
+        font-size: 9px;
+    }
+}
+
+@media (max-width: 320px) {
+    table {
+        width: 100%;
+        font-size: 10px;
+    }
+    
+    th, td {
+        padding: 4px;
+        font-size: 8px;
+    }
+
+    .header h1 {
+        font-size: 14px;
+    }
+}
